# cryptonote-speedup-demo

./: CMakeLists.txt  README.md  READMEe.md  cn64_show.kdev4  main.cpp  vector32.h
.kdev4/: cn64_show.kdev4
crypt-aux/: keccak.c  keccak.h  random.c
ecops32/: crypto-ops.c  crypto-ops.h
ecops64/: ecops64-c.c  ecops64-data.c  ecops64.asm  ecops64.h
